<resources>
    <string name="app_name">Inventory App 3</string>
    <string name="action_settings">Settings</string>
    <string name="home_page">Home</string>
    <string name="new_item">new item</string>
    <string name="no_data_text">The database is empty, please add new items using the button bellow.</string>
    <string name="list_title_test">title test</string>
    <string name="list_test_price">test price</string>
    <string name="add_item_title">Add an item below</string>
    <string name="name_hint">Name</string>
    <string name="size_hint">Size (S, M, L)</string>
    <string name="price_hint">Price</string>
    <string name="quantity_hint">Quantity</string>
    <string name="add_button">Take photo and add</string>
    <string name="detail_title">Test title</string>
    <string name="detail_size">Medium</string>
    <string name="detail_price">$25.99</string>
    <string name="detail_quantity">Stock: 4</string>
    <string name="detail_content_description">image of selected item</string>
    <string name="minus_button">-</string>
    <string name="quantity_edit">2</string>
    <string name="plus_button">+</string>
    <string name="sell_button">Sell</string>
    <string name="receieve_button">Recieve</string>
    <string name="receive_button">receive</string>
    <string name="delete_all_button">delete all</string>
</resources>
