<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:id="@+id/detailTitle"
        android:text="@string/detail_title"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="24sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/test"
        android:layout_weight="1"
        android:id="@+id/detailImage"
        android:scaleType="fitCenter"
        android:contentDescription="@string/detail_content_description"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:id="@+id/detailSize"
        android:text="@string/detail_size"
        android:textAlignment="gravity"
        android:gravity="start"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:id="@+id/detailPrice"
        android:text="@string/detail_price"
        android:textAlignment="gravity"
        android:gravity="start"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:id="@+id/detailQuantity"
        android:text="@string/detail_quantity"
        android:textAlignment="gravity"
        android:gravity="start"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus_button"
            android:id="@+id/minusButton"
            style="?android:attr/buttonBarButtonStyle"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/quantity_edit"
            android:textAlignment="gravity"
            android:gravity="center"
            android:id="@+id/quantitySelected"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus_button"
            android:id="@+id/plusButton"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:padding="2dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sell_button"
            android:id="@+id/sellButton"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/receive_button"
            android:id="@+id/receiveButton"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_all_button"
            android:id="@+id/deleteAllButton"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

</LinearLayout>