<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:text="@string/add_item_title"
        android:textSize="24sp"
        android:textAllCaps="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/name_hint"
        android:id="@+id/item_name"
        android:imeOptions="actionDone"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/size_hint"
        android:id="@+id/item_size"
        android:imeOptions="actionDone"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/price_hint"
        android:id="@+id/item_price"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/quantity_hint"
        android:id="@+id/item_quantity"
        android:imeOptions="actionDone"
        android:inputType="number"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:id="@+id/photo_add_button"
        android:text="@string/add_button"/>


</LinearLayout>